--- a/index.html
+++ b/index.html
@@ -262,6 +262,25 @@
           "website_en": "https://www.advamed.org/"
         }
       },
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      121.404943, 31.202491
+      ]
+      },
+      "properties": {
+      "orgname_en": "Aichi Industrial Revitalization Organization",
+      "orgname_ch": "日本公益财团法人爱知产业振兴机构",
+      "psu_en": "Shanghai Commission of Commerce",
+      "originloc": "Japan",
+      "sector": "Trade",
+      "regloc": "Shanghai",
+      "regdate": "November 3, 2017",
+      "actarea": "China"
+      }
+      },
 
       {
         "type": "Feature",
@@ -658,6 +677,29 @@
           "website_ch": "https://cedarfund.org/"
         }
       },
+
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.399929, 31.202490
+          ]
+        },
+        "properties": {
+          "orgname_en": "Central Assembly of the Aquaculture Collaboration Association",
+          "orgname_ch": "韩国水产业协同组合中央会",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "South Korea",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "November 9, 2017",
+          "actarea": "Shanghai, Jiangsu, Fujian, Jiangxi, Hunan, Guangdong, Guangxi, Hainan, Guizhou, Yunnan"
+        }
+      },
+
+
           {
         "type": "Feature",
         "geometry": {
@@ -1293,7 +1335,7 @@
       ]
       },
       "properties": {
-      "orgname_en": "Delegations of German Industry & Commerce",
+      "orgname_en": "Delegations of German Industry & Commerce (Guangdong)",
       "orgname_ch": "德国工商大会",
       "psu_en": "Guangdong Department of Commerce",
       "originloc": "Germany",
@@ -1305,7 +1347,27 @@
       "website_ch": "http://china.ahk.de/cn/about-us/delegation-of-german-industry-commerce/"
       }
       },
-
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      121.481949, 31.197102
+      ]
+      },
+      "properties": {
+      "orgname_en": "Delegations of German Industry & Commerce (Shanghai)",
+      "orgname_ch": "德国工商大会",
+      "psu_en": "Shanghai Commission of Commerce",
+      "originloc": "Germany",
+      "sector": "Trade",
+      "regloc": "Shanghai",
+      "regdate": "November 9, 2017",
+      "actarea": "Shanghai, Jiangsu, Zhejiang, Anhui, Jiangxi, Shandong, Henan, Hubei",
+      "website_en": "http://china.ahk.de/about-us/delegation-of-german-industry-commerce/",
+      "website_ch": "http://china.ahk.de/cn/about-us/delegation-of-german-industry-commerce/"
+      }
+      },
 
       {
         "type": "Feature",
@@ -3345,6 +3407,28 @@
           "website_ch": "http://www.gatesfoundation.org/zh/"
         }
       },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.647482, 38.922211
+          ]
+        },
+        "properties": {
+          "orgname_en": "Miyagi Prefecture International Economic Revitalization Association",
+          "orgname_ch": "日本公益社团法人宫城县国际经济振兴协会",
+          "psu_en": "Liaoning Department of Commerce",
+          "originloc": "Japan",
+          "sector": "Trade, International Relations/Exchange, Tourism",
+          "regloc": "Liaoning",
+          "regdate": "November 9, 2017",
+          "actarea": "Beijing, Tianjin, Hebei, Shanxi, Inner Mongolia, Liaoning, Jilin, Heilongjiang, Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Shandong, Henan, Hubei, Hunan, Guangdong, Guangxi, Hainan, Chongqing, Sichuan, Guizhou, Yunnan, Tibet, Shaanxi, Gansu, Qinghai, Ningxia"
+        }
+      },
+
+
       {
         "type": "Feature",
         "geometry": {
@@ -4139,6 +4223,28 @@
         "geometry": {
           "type": "Point",
           "coordinates": [
+            121.500906, 31.236778
+          ]
+        },
+        "properties": {
+          "orgname_en": "Scottish Development International",
+          "orgname_ch": "英国苏格兰工商委员会",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "United Kingdom",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "November 3, 2017",
+          "actarea": "Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Hubei, Hunan, Guangdong, Guangxi, Hainan, Chongqing, Sichuan, Guizhou, Yunnan, Tibet",
+          "website_en": "https://www.sdi.co.uk/locations/asia-and-pacific/china-shanghai/shanghai-office-details?intcmp=locmap"
+        }
+      },
+
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
             116.494412, 39.934857
           ]
         },
@@ -4403,27 +4509,7 @@
           "website_ch": "http://www.teema.org.tw/china-service-chs.aspx"
         }
       },
-      {
-        "type": "Feature",
-        "geometry": {
-          "type": "Point",
-          "coordinates": [
-             104.081409, 30.655164
-          ]
-        },
-        "properties": {
-          "orgname_en": "Taiwan Trade Center (Chengdu)",
-          "orgname_ch": "台湾贸易中心",
-          "psu_en": "Sichuan Department of Commerce",
-          "originloc": "Taiwan",
-          "sector": "Trade",
-          "regloc": "Sichuan",
-          "regdate": "June 21, 2017",
-          "actarea": "Xinjiang, Qinghai, Chongqing, Sichuan, Tibet",
-          "website_en": "http://www.teema.org.tw/english/index.aspx",
-          "website_ch": "http://www.teema.org.tw/china-service-chs.aspx"
-        }
-      },
+
       {
         "type": "Feature",
         "geometry": {
@@ -4443,6 +4529,51 @@
           "actarea": "Guangdong, Guangxi, Fujian, Jiangxi, Hainan, Yunnan, Guizhou"
         }
       },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             121.627613, 38.913307
+          ]
+        },
+        "properties": {
+          "orgname_en": "Taiwan Trade Center (Liaoning)",
+          "orgname_ch": "台湾贸易中心",
+          "psu_en": "Liaoning Public Security Bureau",
+          "originloc": "Taiwan",
+          "sector": "Trade",
+          "regloc": "Liaoning",
+          "regdate": "November 9, 2017",
+          "actarea": "Liaoning, Jilin, Heilongjiang",
+          "website_en": "http://www.teema.org.tw/english/index.aspx",
+          "website_ch": "http://www.teema.org.tw/china-service-chs.aspx"
+        }
+      },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             104.081409, 30.655164
+          ]
+        },
+        "properties": {
+          "orgname_en": "Taiwan Trade Center (Sichuan)",
+          "orgname_ch": "台湾贸易中心",
+          "psu_en": "Sichuan Department of Commerce",
+          "originloc": "Taiwan",
+          "sector": "Trade",
+          "regloc": "Sichuan",
+          "regdate": "June 21, 2017",
+          "actarea": "Xinjiang, Qinghai, Chongqing, Sichuan, Tibet",
+          "website_en": "http://www.teema.org.tw/english/index.aspx",
+          "website_ch": "http://www.teema.org.tw/china-service-chs.aspx"
+        }
+      },
+
       {
         "type": "Feature",
         "geometry": {
@@ -4472,7 +4603,7 @@
           ]
         },
         "properties": {
-          "orgname_en": "The Netherlands Trade Promotion Council",
+          "orgname_en": "The Netherlands Trade Promotion Council (Hubei)",
           "orgname_ch": "荷兰贸易促进委员会",
           "psu_en": "Hubei Department of Agriculture",
           "originloc": "The Netherlands",
@@ -4480,6 +4611,48 @@
           "regloc": "Hubei",
           "regdate": "October 31, 2017",
           "actarea": "Hubei",
+          "website_ch": "https://www.niyuhelan.nl/%E4%BD%A0%E4%B8%8E%E8%8D%B7%E5%85%B0/%E4%B8%AD%E5%9B%BD/%E5%85%B3%E4%BA%8E%E6%88%91%E4%BB%AC/%E8%8D%B7%E5%85%B0%E8%B4%B8%E6%98%93%E4%BF%83%E8%BF%9B%E5%A7%94%E5%91%98%E4%BC%9A---%E5%85%B3%E4%BA%8E%E6%88%91%E4%BB%AC"
+        }
+      },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             117.001333, 36.621445
+          ]
+        },
+        "properties": {
+          "orgname_en": "The Netherlands Trade Promotion Council (Jinan, Shandong)",
+          "orgname_ch": "荷兰贸易促进委员会济南代表处",
+          "psu_en": "Shandong Commission of Commerce",
+          "originloc": "The Netherlands",
+          "sector": "Trade, Technology, Education",
+          "regloc": "Shandong",
+          "regdate": "November 8, 2017",
+          "actarea": "Shandong",
+          "website_ch": "https://www.niyuhelan.nl/%E4%BD%A0%E4%B8%8E%E8%8D%B7%E5%85%B0/%E4%B8%AD%E5%9B%BD/%E5%85%B3%E4%BA%8E%E6%88%91%E4%BB%AC/%E8%8D%B7%E5%85%B0%E8%B4%B8%E6%98%93%E4%BF%83%E8%BF%9B%E5%A7%94%E5%91%98%E4%BC%9A---%E5%85%B3%E4%BA%8E%E6%88%91%E4%BB%AC"
+        }
+      },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             120.381806, 36.064265
+          ]
+        },
+        "properties": {
+          "orgname_en": "The Netherlands Trade Promotion Council (Qingdao, Shandong)",
+          "orgname_ch": "荷兰贸易促进委员会济南代表处",
+          "psu_en": "Shandong Commission of Commerce",
+          "originloc": "The Netherlands",
+          "sector": "Trade, Technology, Education",
+          "regloc": "Shandong",
+          "regdate": "November 8, 2017",
+          "actarea": "Shandong",
           "website_ch": "https://www.niyuhelan.nl/%E4%BD%A0%E4%B8%8E%E8%8D%B7%E5%85%B0/%E4%B8%AD%E5%9B%BD/%E5%85%B3%E4%BA%8E%E6%88%91%E4%BB%AC/%E8%8D%B7%E5%85%B0%E8%B4%B8%E6%98%93%E4%BF%83%E8%BF%9B%E5%A7%94%E5%91%98%E4%BC%9A---%E5%85%B3%E4%BA%8E%E6%88%91%E4%BB%AC"
         }
       },
@@ -4854,6 +5027,26 @@
         }
       },
 
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             121.455678, 31.228108
+          ]
+        },
+        "properties": {
+          "orgname_en": "Western Australia Trade and Investment Promotion",
+          "orgname_ch": "澳大利亚西澳大利亚州贸易投资促进",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "Australia",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "November 9, 2017",
+          "actarea": "China"
+        }
+      },
+
        {
         "type": "Feature",
         "geometry": {
@@ -4896,6 +5089,8 @@
           "website_en": "https://china.wcs.org"
         }
       },
+
+
 
       {
        "type": "Feature",
