--- a/index.html
+++ b/index.html
@@ -262,6 +262,29 @@
           "website_en": "https://www.advamed.org/"
         }
       },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            106.575217, 29.556099
+          ]
+        },
+        "properties": {
+          "orgname_en": "Agriterra",
+          "orgname_ch": "荷兰农民生产者协会",
+          "psu_en": "Chongqing Agriculture Commission",
+          "originloc": "The Netherlands",
+          "sector": "Rural Issues/Development, Economic Development, Education, Environment",
+          "regloc": "Chongqing",
+          "regdate": "November 13, 2017",
+          "actarea": "Chongqing, Sichuan, Yunnan, Shaanxi",
+          "website_en": "https://www.agriterra.org/"
+        }
+      },
+
+
       {
       "type": "Feature",
       "geometry": {
@@ -1324,6 +1347,28 @@
           "actarea": "China",
           "website_en": "https://www.dk-export.com/"
         }
+      },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.462695, 39.945823
+      ]
+      },
+      "properties": {
+      "orgname_en": "Delegations of German Industry & Commerce (Beijing)",
+      "orgname_ch": "德国工商大会",
+      "psu_en": "Beijing Commission of Commerce",
+      "originloc": "Germany",
+      "sector": "Trade",
+      "regloc": "Beijing",
+      "regdate": "November 16, 2017",
+      "actarea": "Beijing, Tianjin, Hebei, Inner Mongolia, Liaoning, Jilin, Heilongjiang",
+      "website_en": "http://china.ahk.de/about-us/delegation-of-german-industry-commerce/",
+      "website_ch": "http://china.ahk.de/cn/about-us/delegation-of-german-industry-commerce/"
+      }
       },
 
       {
@@ -3633,6 +3678,29 @@
 "website_ch": "http://www.nzcita.org/cn/"
 }
 },
+
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.438013, 39.907977
+]
+},
+"properties": {
+"orgname_en": "Niigata City Industrial Revitalization Financial Group",
+"orgname_ch": "公益财团法人新潟市产业振兴财团",
+"psu_en": "Beijing Commission of Commerce",
+"originloc": "Japan",
+"sector": "Trade",
+"regloc": "Beijing",
+"regdate": "November 16, 2017",
+"actarea": "China"
+}
+},
+
+
+
 {
 "type": "Feature",
 "geometry": {
