--- a/index.html
+++ b/index.html
@@ -1286,6 +1286,29 @@
       },
 
       {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      121.407459, 31.207124
+      ]
+      },
+      "properties": {
+      "orgname_en": "Croatian Chamber of Economy",
+      "orgname_ch": "克罗地亚经济商会",
+      "psu_en": "Shanghai Commission of Commerce",
+      "originloc": "Croatia",
+      "sector": "Trade",
+      "regloc": "Shanghai",
+      "regdate": "November 27, 2017",
+      "actarea": "China",
+      "website_en": "https://www.hgk.hr/english"
+      }
+      },
+
+
+
+      {
         "type": "Feature",
         "geometry": {
           "type": "Point",
@@ -2373,6 +2396,50 @@
       },
 
       {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      104.088179, 30.671928
+      ]
+      },
+      "properties": {
+      "orgname_en": "Hong Kong Society for Rehabilitation",
+      "orgname_ch": "香港复康会",
+      "psu_en": "Sichuan Disabled Person’s Federation",
+      "originloc": "Hong Kong",
+      "sector": "Civil Society Capacity-Building, Disabilities, Disaster Relief, Education, Health",
+      "regloc": "Sichuan",
+      "regdate": "November 21, 2017",
+      "actarea": "Sichuan",
+      "website_en": "http://www.rehabsociety.org.hk/",
+      "website_ch": "http://www.rehabsociety.org.hk/zh-hant/"
+      }
+      },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      121.455427, 31.216701
+      ]
+      },
+      "properties": {
+      "orgname_en": "Hong Kong-Shanghai Youth Association",
+      "orgname_ch": "沪港青年会",
+      "psu_en": "Shanghai Chinese Communist Youth League Committee",
+      "originloc": "Hong Kong",
+      "sector": "International Relations/Exchange, Youth",
+      "regloc": "Shanghai",
+      "regdate": "November 22, 2017",
+      "actarea": "China",
+      "website_ch": "http://www.hkshya.org.hk/"
+      }
+      },
+
+
+      {
         "type": "Feature",
         "geometry": {
           "type": "Point",
@@ -2476,6 +2543,28 @@
           "website_en": "http://www.ifpi.org/"
         }
       },
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      122.122782, 37.503410
+      ]
+      },
+      "properties": {
+      "orgname_en": "Incheon Chamber of Commerce and Industry",
+      "orgname_ch": "大韩民国仁川商工会议所",
+      "psu_en": "Shandong Department of Commerce",
+      "originloc": "South Korea",
+      "sector": "Technology, Trade",
+      "regloc": "Shandong",
+      "regdate": "November 27, 2017",
+      "actarea": "Beijing, Chongqing, Fujian, Guangdong, Jiangsu, Shandong, Shanghai, Sichuan, Tianjin, Zhejiang"
+      }
+      },
+
+
+
       {
   "type": "Feature",
   "geometry": {
@@ -2937,6 +3026,27 @@
     "actarea": "Beijing, Tianjin, Hebei, Shanghai, Jiangsu, Anhui, Fujian, Henan, Guangdong, Sichuan"
   }
 },
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.438421, 39.907537
+]
+},
+"properties": {
+"orgname_en": "Japan-China Long-Term Trade Agreement Committee",
+"orgname_ch": "日本日中长期贸易协议委员会",
+"psu_en": "Beijing Commission of Commerce",
+"originloc": "Japan",
+"sector": "Energy, Environment, Trade",
+"regloc": "Beijing",
+"regdate": "November 17, 2017",
+"actarea": "Beijing, Fujian, Guangdong, Hebei, Heilongjiang, Henan, Jilin, Liaoning, Shandong, Tianjin"
+}
+},
+
+
 
       {
         "type": "Feature",
@@ -3312,6 +3422,28 @@
       "geometry": {
       "type": "Point",
       "coordinates": [
+      121.404847, 31.202638
+      ]
+      },
+      "properties": {
+      "orgname_en": "KYOTO Industrial Support Organization 21",
+      "orgname_ch": "日本公益财团法人京都产业21",
+      "psu_en": "Shanghai Commission of Commerce",
+      "originloc": "Croatia",
+      "sector": "Trade",
+      "regloc": "Shanghai",
+      "regdate": "November 22, 2017",
+      "actarea": "China",
+      "website_en": "https://www.ki21.jp/english/"
+      }
+      },
+
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
       116.458844, 39.918949
       ]
       },
@@ -3636,6 +3768,51 @@
 "actarea": "Jilin, Ningxia, Qinghai, Tianjin, Liaoning, Inner Mongolia, Gansu, Heilongjiang, Hebei, Beijing"
 }
 },
+
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.462906, 39.920675
+]
+},
+"properties": {
+"orgname_en": "Natural Resources Defense Council",
+"orgname_ch": "自然资源保护协会",
+"psu_en": "State Forestry Administration",
+"originloc": "United States",
+"sector": "Environment",
+"regloc": "Beijing",
+"regdate": "November 17, 2017",
+"actarea": "Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guizhou, Hebei, Henan, Hunan, Inner Mongolia, Jiangsu, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Zhejiang",
+"website_en": "http://www.nrdc.cn/",
+"website_ch": "http://www.nrdc.cn/"
+}
+},
+
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       116.445108, 39.909210
+    ]
+  },
+  "properties": {
+    "orgname_en": "The Nature Conservancy",
+    "orgname_ch": "大自然保护协会",
+    "psu_en": "State Forestry Administration",
+    "originloc": "United States",
+    "sector": "Environment, Animal Protection",
+    "regloc": "Beijing",
+    "regdate": "May 19, 2017",
+    "actarea": "China",
+    "website_en": "https://www.nature.org/ourinitiatives/regions/asiaandthepacific/china/index.htm",
+    "website_ch": "http://www.grains.org.cn/"
+  }
+},
+
       {
         "type": "Feature",
         "geometry": {
@@ -4183,6 +4360,29 @@
 "website_en": "http://www.riaj.or.jp/e/?requestLocale=en"
 }
 },
+
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.457943, 39.914550
+]
+},
+"properties": {
+"orgname_en": "Rockefeller Brothers Fund",
+"orgname_ch": "洛克菲勒兄弟基金会",
+"psu_en": "Ministry of Environmental Protection",
+"originloc": "United States",
+"sector": "Education, Environment, Law and Governance",
+"regloc": "Beijing",
+"regdate": "November 17, 2017",
+"actarea": "Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hunan, Jiangxi, Sichuan, Yunnan",
+"website_en": "https://www.rbf.org/"
+}
+},
+
+
 {
   "type": "Feature",
   "geometry": {
@@ -4307,7 +4507,26 @@
         }
       },
 
-
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.413473, 39.897175
+      ]
+      },
+      "properties": {
+      "orgname_en": "Shih Wing Ching Foundation",
+      "orgname_ch": "施永青基金",
+      "psu_en": "Chinese People’s Association for Friendship with Foreign Countries",
+      "originloc": "Hong Kong",
+      "sector": "Arts and Culture, Civil Society Capacity-Building, Economic Development, Education, Health, International Relations/Exchange",
+      "regloc": "Beijing",
+      "regdate": "November 23, 2017",
+      "actarea": "China",
+      "website_en": "https://www.hgk.hr/english"
+      }
+      },
       {
         "type": "Feature",
         "geometry": {
@@ -4609,7 +4828,7 @@
         "properties": {
           "orgname_en": "Taiwan Trade Center (Liaoning)",
           "orgname_ch": "台湾贸易中心",
-          "psu_en": "Liaoning Public Security Bureau",
+          "psu_en": "Liaoning Department of Commerce",
           "originloc": "Taiwan",
           "sector": "Trade",
           "regloc": "Liaoning",
@@ -4641,6 +4860,30 @@
           "website_ch": "http://www.teema.org.tw/china-service-chs.aspx"
         }
       },
+
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      112.893175, 28.214400
+      ]
+      },
+      "properties": {
+      "orgname_en": "Thailand-China Eastern Alliance Trade Promotion Council",
+      "orgname_ch": "泰中东盟经贸促进会",
+      "psu_en": "Hunan Department of Commerce",
+      "originloc": "Thailand",
+      "sector": "Arts and Culture, International Relations/Exchange, Trade",
+      "regloc": "Hunan",
+      "regdate": "November 27, 2017",
+      "actarea": "Hunan",
+      "website_en": "https://www.hgk.hr/english"
+      }
+      },
+
+
 
       {
         "type": "Feature",
@@ -4785,27 +5028,7 @@
         }
       },
 
-      {
-        "type": "Feature",
-        "geometry": {
-          "type": "Point",
-          "coordinates": [
-             116.445108, 39.909210
-          ]
-        },
-        "properties": {
-          "orgname_en": "The Nature Conservancy",
-          "orgname_ch": "大自然保护协会",
-          "psu_en": "State Forestry Administration",
-          "originloc": "United States",
-          "sector": "Environment, Animal Protection",
-          "regloc": "Beijing",
-          "regdate": "May 19, 2017",
-          "actarea": "China",
-          "website_en": "https://www.nature.org/ourinitiatives/regions/asiaandthepacific/china/index.htm",
-          "website_ch": "http://www.grains.org.cn/"
-        }
-      },
+
       {
         "type": "Feature",
         "geometry": {
@@ -5014,6 +5237,30 @@
           "website_ch": "http://www.usito.org/zh-hans"
         }
       },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      121.450177, 31.224563
+      ]
+      },
+      "properties": {
+      "orgname_en": "United Way Worldwide",
+      "orgname_ch": "全球联合之路",
+      "psu_en": "Shanghai Bureau of Civil Affairs",
+      "originloc": "United States",
+      "sector": "Civil Society Capacity-Building, International Relations/Exchange",
+      "regloc": "Shanghai",
+      "regdate": "November 21, 2017",
+      "actarea": "Anhui, Beijing, Chongqing, Fujian, Guangdong, Hebei, Heilongjiang, Henan, Jiangsu, Jilin, Liaoning, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin",
+      "website_en": "https://www.unitedway.org"
+      }
+      },
+
+
+
       {
         "type": "Feature",
         "geometry": {
@@ -5243,6 +5490,29 @@
           "website_ch": "http://www.gold.org/cn/homepage"
         }
       },
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.419490, 39.939545
+      ]
+      },
+      "properties": {
+      "orgname_en": "World Resources Institute",
+      "orgname_ch": "世界资源研究所",
+      "psu_en": "Ministry of Environmental Protection",
+      "originloc": "United States",
+      "sector": "Education, Environment",
+      "regloc": "Beijing",
+      "regdate": "November 17, 2017",
+      "actarea": "Beijing, Guangdong, Guizhou, Hebei, Hubei, Hunan, Jiangsu, Ningxia, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Xinjiang, Yunnan, Zhejiang",
+      "website_en": "http://www.wri.org.cn/en",
+      "website_ch": "http://www.wri.org.cn/"
+      }
+      },
+
+
 
        {
         "type": "Feature",
@@ -5434,6 +5704,30 @@
           "website_ch": "http://www.wwfchina.org/"
         }
       },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      104.018377, 30.685340
+      ]
+      },
+      "properties": {
+      "orgname_en": "XiaoPing Education Foundation",
+      "orgname_ch": "小平教育基金会有限公司",
+      "psu_en": "Sichuan Department of Education",
+      "originloc": "Hong Kong",
+      "sector": "Disaster Relief, Education, Poverty Alleviation",
+      "regloc": "Sichuan",
+      "regdate": "November 21, 2017",
+      "actarea": "Sichuan",
+      "website_en": "http://www.xpef.org/english.html",
+      "website_ch": "http://www.xpef.org/"
+      }
+      },
+
+
       {
         "type": "Feature",
         "geometry": {
