--- a/index_RO_dash1.html
+++ b/index_RO_dash1.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-October 2017</h1></div>
+<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-November 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -457,32 +457,33 @@ var freqData=[
 	Province: "Beijing",
 	freq:{
 	Aging: 0,
-	Agriculture: 0,
+	Agriculture: 1,
 	Animals: 4,
 	Culture: 6,
-	Capacity: 8,
+	Capacity: 10,
 	Disabilities: 3,
 	Disaster: 10,
-	Development: 8,
-	Education: 25,
-	Energy: 1,
-	Environment: 17,
+	Development: 10,
+	Education: 32,
+	Energy: 4,
+	Environment: 23,
 	Ethnic: 2,
   Gender: 4,
-	Health: 16,
-	Infrastructure: 1,
-	International: 18,
+	Health: 18,
+	Infrastructure: 2,
+	International: 23,
 	Labor: 3,
-	Law: 2,
-  Migrants: 0,
+	Law: 6,
+	Media: 1,
+ 	Migrants: 0,
 	Poverty: 7,
 	Religion: 0,
 	Rural: 0,
-	Sport: 3,
-	Technology: 0,
+	Sport: 4,
+	Technology: 4,
 	Tourism: 1,
-	Trade: 32,
-	Urban: 2,
+	Trade: 42,
+	Urban: 4,
 	Youth: 14}
 	},
 {
@@ -495,10 +496,10 @@ var freqData=[
 	Capacity: 2,
 	Disabilities: 1,
 	Disaster: 0,
-	Development: 1,
-	Education: 0,
+	Development: 2,
+	Education: 1,
 	Energy: 0,
-	Environment: 1,
+	Environment: 2,
 	Ethnic: 0,
   Gender: 0,
 	Health: 1,
@@ -506,10 +507,11 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
-	Rural: 0,
+	Rural: 1,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
@@ -538,7 +540,8 @@ var freqData=[
   	International: 4,
   	Labor: 0,
   	Law: 0,
-    Migrants: 0,
+	Media: 0,
+    	Migrants: 0,
   	Poverty: 0,
   	Religion: 1,
   	Rural: 0,
@@ -571,7 +574,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 2,
 	Religion: 0,
 	Rural: 0,
@@ -603,7 +607,8 @@ var freqData=[
 	International: 4,
 	Labor: 0,
 	Law: 0,
-  Migrants: 1,
+	Media: 0,
+  	Migrants: 1,
 	Poverty: 3,
 	Religion: 0,
 	Rural: 1,
@@ -635,7 +640,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 3,
 	Religion: 0,
 	Rural: 0,
@@ -667,7 +673,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 1,
+	Media: 0,
+  	Migrants: 1,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 0,
@@ -699,7 +706,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 0,
@@ -732,7 +740,8 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 0,
@@ -765,7 +774,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 0,
@@ -782,7 +792,7 @@ var freqData=[
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 0,
+	Culture: 1,
 	Capacity: 0,
 	Disabilities: 0,
 	Disaster: 0,
@@ -794,17 +804,18 @@ var freqData=[
   Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 0,
+	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Rural: 1,
 	Religion: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 1,
+	Trade: 2,
 	Urban: 0,
 	Youth: 2}
 	},
@@ -829,7 +840,8 @@ var freqData=[
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Law: 0,
   Migrants: 0,
 	Poverty: 0,
@@ -864,7 +876,8 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 0,
@@ -896,7 +909,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 1,
+	Media: 0,
+  	Migrants: 1,
 	Poverty: 1,
 	Religion: 0,
 	Rural: 0,
@@ -929,7 +943,8 @@ var freqData=[
   	International: 0,
   	Labor: 0,
   	Law: 0,
-    Migrants: 0,
+	Media: 0,
+   	Migrants: 0,
   	Poverty: 0,
   	Religion: 0,
   	Rural: 0,
@@ -959,17 +974,18 @@ var freqData=[
   Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 2,
+	International: 3,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 0,
 	Sport: 1,
 	Technology: 0,
-	Tourism: 1,
-	Trade: 8,
+	Tourism: 2,
+	Trade: 10,
 	Urban: 0,
 	Youth: 0}
 	},
@@ -994,7 +1010,8 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 1,
 	Religion: 0,
 	Rural: 0,
@@ -1028,7 +1045,8 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 1,
+	Media: 0,
+  	Migrants: 1,
 	Poverty: 1,
 	Religion: 0,
 	Rural: 1,
@@ -1050,7 +1068,7 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 1,
-	Education: 0,
+	Education: 2,
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
@@ -1060,14 +1078,15 @@ var freqData=[
 	International: 2,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 1,
 	Sport: 0,
-	Technology: 1,
+	Technology: 4,
 	Tourism: 0,
-	Trade: 2,
+	Trade: 5,
 	Urban: 0,
 	Youth: 0}
 	},
@@ -1078,7 +1097,7 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
-	Capacity: 0,
+	Capacity: 1,
 	Disabilities: 0,
 	Disaster: 1,
 	Development: 3,
@@ -1089,19 +1108,20 @@ var freqData=[
   Gender: 0,
 	Health: 1,
 	Infrastructure: 1,
-	International: 4,
+	International: 6,
 	Labor: 1,
 	Law: 2,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 1,
 	Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 1,
 	Tourism: 1,
-	Trade: 50,
+	Trade: 57,
 	Urban: 1,
-	Youth: 0}
+	Youth: 1}
 	},
 {
 	Province: "Sichuan",
@@ -1110,22 +1130,23 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
-	Capacity: 2,
-	Disabilities: 0,
-	Disaster: 3,
+	Capacity: 3,
+	Disabilities: 1,
+	Disaster: 5,
 	Development: 1,
-	Education: 3,
+	Education: 5,
 	Energy: 0,
 	Environment: 3,
 	Ethnic: 0,
   Gender: 2,
-	Health: 4,
+	Health: 5,
 	Infrastructure: 2,
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
-	Poverty: 3,
+	Media: 0,
+  	Migrants: 0,
+	Poverty: 4,
 	Religion: 0,
 	Rural: 2,
 	Sport: 0,
@@ -1156,7 +1177,8 @@ var freqData=[
 	International: 2,
 	Labor: 1,
 	Law: 0,
-  Migrants: 1,
+	Media: 0,
+  	Migrants: 1,
 	Poverty: 2,
 	Religion: 0,
 	Rural: 0,
@@ -1188,7 +1210,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 0,
@@ -1220,7 +1243,8 @@ var freqData=[
 	International: 1,
 	Labor: 1,
 	Law: 0,
-  Migrants: 1,
+	Media: 0,
+ 	Migrants: 1,
 	Poverty: 5,
 	Religion: 0,
 	Rural: 3,
@@ -1237,7 +1261,7 @@ var freqData=[
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 0,
+	Culture: 1,
 	Capacity: 0,
 	Disabilities: 0,
 	Disaster: 0,
@@ -1250,16 +1274,17 @@ var freqData=[
 	Health: 0,
 	Infrastructure: 0,
 	International: 0,
-	Labor: 0,
+	Labor: 1,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
 	Religion: 0,
 	Rural: 0,
 	Sport: 0,
-	Technology: 0,
+	Technology: 1,
 	Tourism: 0,
-	Trade: 1,
+	Trade: 2,
 	Urban: 0,
 	Youth: 0}
 	}
